--- a/examples/openloop/open_loop_simulation.ipynb
+++ b/examples/openloop/open_loop_simulation.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import os\n",
     "\n",
     "SIM_DIR = \"out/sim\"\n",
     "CSV_OUTPUT = f\"{SIM_DIR}/measurement.ChannelGroup_0_linear.csv\"\n",
@@ -27,16 +28,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Drag and Drop Widget for CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Drag and drop your CSV file below. It will be saved to: ./csv_input\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "497fb7da47cb4043ac240c2d5df3d4f9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FileUpload(value=(), accept='.csv', description='Upload')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 'input__value_set.csv' has been uploaded and copied to './csv_input'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "target_folder = \"./csv_input\" \n",
+    "os.makedirs(target_folder, exist_ok=True)\n",
+    "\n",
+    "# file uploader widget\n",
+    "uploader = widgets.FileUpload(\n",
+    "    accept='.csv', \n",
+    "    multiple=False \n",
+    ")\n",
+    "\n",
+    "def handle_upload(change):\n",
+    "    if uploader.value:  # Check if a file has been uploaded\n",
+    "        for uploaded_file in uploader.value:\n",
+    "            file_name = uploaded_file['name']  # Get the file name\n",
+    "            file_content = uploaded_file['content']  # Get the file content\n",
+    "            # Save the file to the target folder\n",
+    "            file_path = os.path.join(target_folder, file_name)\n",
+    "            with open(file_path, 'wb') as f:\n",
+    "                f.write(file_content)\n",
+    "            print(f\"File '{file_name}' has been uploaded and copied to '{target_folder}'.\")\n",
+    "\n",
+    "# Attach the function to the widget's change event\n",
+    "uploader.observe(handle_upload, names='value')\n",
+    "\n",
+    "# Display the widget\n",
+    "print(f\"Drag and drop your CSV file below. It will be saved to: {target_folder}\")\n",
+    "display(uploader)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Notebook Controller"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "from asammdf import MDF\n",
     "\n",
     "def run_command(cmd):\n",
@@ -85,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -114,18 +187,18 @@
      "text": [
       "Command executed successfully.\n",
       "Running: docker run --rm -v /home/kki8kor/dse.sdp/examples/openloop/out/sim:/sim ghcr.io/boschglobal/dse-simer:latest -env linear:MEASUREMENT_FILE=/sim/measurement.mf4 -stepsize 0.0005 -endtime 0.005\n",
-      "Version: 2.1.61) \u001b[0m\n",
+      "1) Version: 2.1.6\u001b[0m\n",
       "1) Load YAML File: data/simulation.yaml\u001b[0m\n",
-      "2) Version: 2.1.6\u001b[0m\n",
-      "2) Platform: linux-amd64\u001b[0m\n",
       "3) Version: 2.1.6\u001b[0m\n",
       "3) Platform: linux-amd64\u001b[0m\n",
-      "3) Time: 2025-00-15 13:28:02 (UTC)\u001b[0m\n",
-      "3) Host: 96df0d15d1a9\u001b[0m\n",
+      "3) Time: 2025-00-16 09:53:24 (UTC)\u001b[0m\n",
+      "3) Host: 89c19de67a60\u001b[0m\n",
       "3) CWD: /sim\u001b[0m\n",
       "3) Load YAML File: data/simulation.yaml\u001b[0m\n",
-      "2) Time: 2025-00-15 13:28:02 (UTC)\u001b[0m\n",
-      "2) Host: 96df0d15d1a9\u001b[0m\n",
+      "2) Version: 2.1.6\u001b[0m\n",
+      "2) Platform: linux-amd64\u001b[0m\n",
+      "2) Time: 2025-00-16 09:53:24 (UTC)\u001b[0m\n",
+      "2) Host: 89c19de67a60\u001b[0m\n",
       "2) CWD: /sim\u001b[0m\n",
       "2) Load YAML File: data/simulation.yaml\u001b[0m\n",
       "2) Load YAML File: model/input/data/model.yaml\u001b[0m\n",
@@ -155,15 +228,9 @@
       "3)     path: (null)\u001b[0m\n",
       "3)     hostname: localhost\u001b[0m\n",
       "3)     port: 6379\u001b[0m\n",
-      "3) Connection error: Connection refused\u001b[0m\n",
-      "3) Retry endpoint creation ...\u001b[0m\n",
-      "3)   Redis Pub/Sub:\u001b[0m\n",
-      "3)     path: (null)\u001b[0m\n",
-      "3)     hostname: localhost\u001b[0m\n",
-      "3)     port: 6379\u001b[0m\n",
       "3)   Endpoint: \u001b[0m\n",
-      "3)     Model UID: 6\u001b[0m\n",
-      "3)     Client ID: 6\u001b[0m\n",
+      "3)     Model UID: 5\u001b[0m\n",
+      "3)     Client ID: 5\u001b[0m\n",
       "3) Create the Controller object ...\u001b[0m\n",
       "3) Create the Adapter object ...\u001b[0m\n",
       "3) Load endpoint create function: adapter_create_msg_vtable\u001b[0m\n",
@@ -204,6 +271,7 @@
       "3) FMU: Create the FMU Model Instance Data\n",
       "3) Measurement File: /sim/measurement.mf4\u001b[0m\n",
       "3) Run the Simulation ...\u001b[0m\n",
+      "3) redispubsub_send_fbs: no clients received message! channel=bus.ch.physical.tx\u001b[0m\n",
       "3) Call symbol: model_destroy ...\u001b[0m\n",
       "3) Controller exit ...\u001b[0m\n",
       "Command executed successfully.\n",
@@ -230,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
